--- a/sigmac.tex
+++ b/sigmac.tex
@@ -150,7 +150,6 @@
 \setkomafont{disposition}{\sffamily}
 % Uppercase numbers for chapters.
 % Set size and style of section and subsections
-\setkomafont{section}{\Large\itshape}
 \setkomafont{subsection}{\large\itshape}
 % Don't put big spaces before chapter headings
 \renewcommand{\chapterheadstartvskip}{\vspace{0.15in}}
@@ -205,7 +204,7 @@
 \newcommand{\edition}{First edition \acronym{(WIP)}}
 
 \title{Some Idiot's Guide to Modern Air Combat}
-\author{José Jimémenez}
+\author{José Jiménez}
 \date{\today}
 
 % Custom footer
@@ -296,7 +295,7 @@ Modern Air Combat
 \null
 \vfill
 
-Copyright © 2018--2020 \\
+Copyright © 2020 \\
 by \runauthor
 \bigskip
 
@@ -335,7 +334,11 @@ Some dedication here.
 \rofoot*{SIGMAC}
 
 \input{what}
+\input{a2a}
+\input{a2g}
 \input{brevity}
+\input{element}
+\input{briefs}
 
 \input{back}
 
