--- a/what.tex
+++ b/what.tex
@@ -17,7 +17,7 @@ Once you know how not to crash the thing, you probably want to learn how to:
 \begin{itemize}
 \item Shoot other jets with missiles beyond visual range \acronym{(bvr)}
 \item Dogfight other jets within visual range \acronym{(wvr)}
-\item Defend yourself from surface-to-air missiles \acronym{(SAM)}s
+\item Defend yourself from surface-to-air missiles \acronym{(sam)}s
 \item Put a bomb on a target
 \item Form a \emph{flight} with other jets, as a wingman or as its lead
 \item Communicate with other pilots and sound cool doing so
