--- a/brevity.tex
+++ b/brevity.tex
@@ -1,4 +1,5 @@
 \chapter{Brevity}
+\label{brevity}
 
 Like most professions, combat aviation has its own jargon.
 Called \emph{brevity}, it's incomprehensibly dense to a newcomer,
@@ -8,7 +9,7 @@ Most folks you find online will be using \textsc{us/nato} brevity.
 There's many,
 many terms,\punckern\footnote{An early-2000s version of an official
 multiservice \textsc{us} training guide is declassified and freely available
-online at \https{apps.dtic.mil/dtic/tr/fulltext/u2/a404426.pdf}}
+online at \url{https://apps.dtic.mil/dtic/tr/fulltext/u2/a404426.pdf}}
 but we'll cover some of the most common ones.
 Before we dive in, know two things:
 \begin{enumerate}
@@ -37,6 +38,12 @@ Before we dive in, know two things:
 
     ``Contact, Bullseye 120 35, 18 thousand. Hot.''
 
+\item[Declare] Tell me if the contact at the given location
+    (using BRAA or a Bullseye call) is friendly or not (see below).
+    Requested from command and control \acronym{(c2)} assets,
+    like an airborne \designation{E-3} Sentry
+    or a ground-based fighter controller.
+
 \item[Friendly/Bogey/Outlaw/Bandit/Hostile]
     Air contacts, by increasing threat:
     \begin{description}
@@ -63,21 +70,25 @@ Before we dive in, know two things:
 
 \item[Bullseye] The thing I'm describing is this direction and distance
     from the \emph{bullseye}.
-    The bullseye is a preplanned location---it could be the target, some landmark,
-    or just an arbitrary point---what's important is that everyone agrees where
-    it is ahead of time.
+    The bullseye is a preplanned location---it could be a large ground target
+    (like an airfield), some landmark,
+    or just an arbitrary point---what matters is that everyone knows where
+    it is so they can use it as a shared reference.
 
     ``Engage armored column, Bullseye 180 20''
 
-\item[Group] Air contacts flying within 3 miles of each other.
+\item[Group] Air contacts flying together.
 
-\item[Picture] Tell me about nearby contacts.
-    (using BRAA or Bullseye calls).
+\item[Picture] Tell me about nearby contacts (with BRAA or Bullseye calls).
+    Requested from \acronym{c2} assets.
+
+\item[Pop-up] A new contact has suddenly appeared at the given location.
 
 \item[Tally/No Joy] I see the enemy.\,/\,I don't see the enemy.
 
-\item[Tumbleweed] I'm disoriented and don't know what's going on.
-    Help me if you can.
+\item[Tumbleweed] I've lost situational awareness \acronym{(sa)}
+    and don't know what's going on.
+    Help me get reoriented, if you can.
 
 \item[Visual/Blind] I see the friendly.\,/\,I don't see the friendly.
 \end{description}
@@ -99,7 +110,7 @@ What are you doing? What's your status?
 
 \item[Fence In] Get ready for combat---shut off external lights,
     arm weapons, enable electronic countermeasures \acronym{(ecm)}, etc.
-    From ``crossing the fence'' when you enter bad guy territory.
+    From ``crossing the fence'' as you enter bad guy territory.
     Once you're out of combat, you \emph{fence out}.
 
 \item[Gate/Buster] Fly as fast as you can [with/without] afterburner.
@@ -155,8 +166,8 @@ Shooting things and not getting shot.
 
 \item[Singer] My \acronym{rwr} indicates a \acronym{sam} is shooting at me!
 
-\item[Slapshot] Shoot an anti-radiation missile in at the given radar/direction \\
-    (as fast as possible, \emph{because they're shooting at me!})
+\item[Slapshot] Shoot an anti-radiation missile at the given radar/direction \\
+    (as fast as possible, because \emph{they're shooting at me!})
 
     ``Slapshot \designation{SA-3}, South!''
 
