--- a/sigmac.tex
+++ b/sigmac.tex
@@ -242,10 +242,6 @@
 % "Chapter <num>" references
 \newcommand{\chapref}[1]{chapter~\ref{#1}}
 
-% monospace URLs (without setting the http://...)
-\newcommand{\http}[1]{\url{http://#1}}
-\newcommand{\https}[1]{\url{https://#1}}
-
 % See http://tex.stackexchange.com/a/68310
 \makeatletter
 \let\runauthor\@author
@@ -306,7 +302,7 @@ In short, you are free to share, translate, adapt, or improve this book
 so long as you give proper credit and provide your contributions under
 the same license. \\
 The license's full text is available at \\
-\https{creativecommons.org/licenses/by-sa/4.0/legalcode}
+\url{https://creativecommons.org/licenses/by-sa/4.0/legalcode}
 
 \vspace{0.5in}
 \edition{} (online \acronym{pdf}), typeset \today.
