--- a/what.tex
+++ b/what.tex
@@ -32,3 +32,16 @@ This won't be a comprehensive guide,
 and contributions are welcome.
 But it should outline the basics, and point you to resources where you can
 learn more.
+
+\section{On Alphabet Soup}
+
+Military organizations and pilots both love acronyms,
+and the jargon you get when you cross the two is an ungodly mess
+to the uninitiated.
+I'll try to introduce relevant acronyms and terms where I can,
+and \chapref{brevity} will cover more of them.
+But I'm bound to miss a few.
+Thankfully, the Internet is full of useful aids---hopefully they can help you
+out.\punckern\footnote{%
+\href{https://www.fighterpilotpodcast.com/glossary/}{The Figheter Pilot Podcast's glossary}
+is a great example.}
