--- a/brevity.tex
+++ b/brevity.tex
@@ -68,6 +68,7 @@ Before we dive in, though, a few points:
     \begin{description}
     \item[Hot] heading towards you
     \item[Dragging] heading away from you
+    \item[Flanking] approaching you at an angle (provide a direction)
     \item[Beaming] heading perpendicular to you (provide a direction)
     \end{description}
 
@@ -96,7 +97,7 @@ Before we dive in, though, a few points:
     or a ground-based fighter controller.
 
 \item[Friendly/Bogey/Outlaw/Bandit/Hostile]
-    Air contacts, by increasing threat:
+    In order of increasing threat:
     \begin{description}
     \item[Friendly] An positively-identified allied contact.
     \item[Bogey] An unknown contact.
@@ -110,7 +111,7 @@ Before we dive in, though, a few points:
     Don't shoot an active radar missile into these or it might go pitbull
     on a friendly.
 
-\item[Group] Air contacts flying together.
+\item[Group] Contacts flying together.
 
 \item[Merged] Contacts---usually bandits---are within visual range
     \acronym{(wvr)}.
@@ -139,7 +140,7 @@ What are you doing? What's your status?
 
 \item[As Fragged] I'm continuing as-planned.
 
-\item[Bingo] I'm low on fuel and need to leave right now if I want enough
+\item[Bingo] I'm low on fuel and need to go home right now if I want enough
     to land.
 
 \item[Commit] Intercept the given group.
@@ -159,7 +160,7 @@ What are you doing? What's your status?
 
 \item[Rolex] Delay the (package's) plan by the given amount of time.
 
-    ``Package, rolex three minutes.''
+    ``Package, rolex plus three [minutes].''
 \end{description}
 
 \section{Combat}
