--- a/a2a.tex
+++ b/a2a.tex
@@ -4,27 +4,35 @@ Intercepting and shooting other airplanes is about managing \emph{time and space
 If you know a bandit is 100 miles away from your jet,
 you have lots of time to create, execute, and evaluate a plan.
 If someone pops-up five miles away and starts shooting at you,
-All you can do is react.
-Situational awareness \acronym{(sa)} is king.
+all you can do is react.
+Situational awareness \acronym{(sa)} is king---knowing what's going on around
+you will keep you alive and let \emph{you} decide how a fight will unfold.
 
-\section{BVR Searching}
+\section{BVR: Searching}
 
 You've got to find the bad guys before you can shoot them,
-so use the resources you have to get a \introduce{picture} of the airspace.
-This could include airborne or ground-based command and control
-\acronym{(c2)}, datalink, your jet's own radar,
-and other planes in your flight.
-Communicate and share information with each other---see \chapref{brevity}.
+so use the tools you have to build a \introduce{picture} of the airspace
+around you.
+These tools include your own radar, as well as
+airborne or ground-based command and control \acronym{(c2)},
+datalink, and other planes in your flight.
+Communicate and share information with each other.\punckern\footnote{See
+\chapref{brevity} for more on how to quickly communicate.}
 
-Searching with your radar is something that comes with practice,
-but understand that it's a fundamental tradeoff between searching a big area
-slowly, or searching a smaller area rapidly.
-You change the size of this area by controlling the horizontal azimuth
+Searching with your radar is something that comes with practice.
+While details vary from plane to plane,
+all of them\footnote{Ignoring very modern active electronically scanned array
+\acronym{(aesa)} radars, which you probably won't find in a sim.}
+have the same fundamental limitation: they work by pointing a narrow radar beam
+around using an antenna on a gimbal in your nose.
+This means you need to choose between searching a big area slowly,
+or searching a smaller area rapidly.
+You change the size and shape of this area by controlling the horizontal azimuth
 and the number of vertical bars in your scan.
 Imagine searching a dark room with a narrow flashlight beam.
 You can examine the whole room by swinging the flashlight in wide arcs
 in front of you (azimuth), and repeating those arcs up and down (bars).
-Or you can focus on a particular corner by swinging the light narrow arcs
+Or you can focus on a particular corner by swinging the light in short arcs
 repeated over fewer vertical motions.
 There's no ``right'' approach---it depends on the situation.
 
@@ -32,11 +40,13 @@ There's no ``right'' approach---it depends on the situation.
 
 You've found something you want to shoot. Great!
 Next make sure to \emph{positvely identify}
-that it's something worth shooting with whatever you have at your disposal:
+that it's worth shooting with whatever you have at your disposal:
 \acronym{iff} transponders,
 declarations from \acronym{c2},
 non-cooperative-target recognition \acronym{(nctr)}
 
 Once you've found some contacts you're interested in,
-use tools like track-while-scan \acronym{(tws)} to follow the target without
-sacrificing \acronym{sa}. Once you single-target-track
+use radar modes like track-while-scan \acronym{(tws)} to follow the target.
+This will provide you with frequent updates on the target's position, heading,
+and speed, while still allowing you to search the space around them.
+From here, 
