--- a/what.tex
+++ b/what.tex
@@ -15,12 +15,12 @@ But once you've got a decent grasp on how to fly a jet,
 guides for \emph{employing} that jet seem harder to come by.
 Once you know how not to crash the thing, you probably want to learn how to:
 \begin{itemize}
-\item Shoot other jets with missiles beyond visual range \acronym{(bvr)}
+\item Shoot other jets with beyond visual range \acronym{(bvr)} missiles
 \item Dogfight other jets within visual range \acronym{(wvr)}
 \item Defend yourself from surface-to-air missiles \acronym{(sam)}s
 \item Put a bomb on a target
 \item Form a \emph{flight} with other jets, as a wingman or as its lead
-\item Communicate with other pilots and sound cool doing so
+\item Communicate with other pilots, and sound cool doing so
 \end{itemize}
 \dots all without taking a missile to the face.
 
@@ -35,9 +35,8 @@ learn more.
 
 \section{On Alphabet Soup}
 
-Military organizations and pilots both love acronyms,
-and the jargon you get when you cross the two is an ungodly mess
-to the uninitiated.
+Militaries and pilots both love acronyms,
+and the jargon you get when you cross the two is an ungodly mess.
 I'll try to introduce relevant acronyms and terms where I can,
 and \chapref{brevity} will cover more of them.
 But I'm bound to miss a few.
