--- a/brevity.tex
+++ b/brevity.tex
@@ -92,7 +92,7 @@ Before we dive in, though, a few points:
 
 \item[Declare] Tell me if the contact at the given location
     (using BRAA or a Bullseye call) is friendly or not (see below).
-    Requested from command and control \acronym{(c2)} assets,
+    Requested from command and control \ac{(c2)} assets,
     like an airborne \designation{E-3} Sentry
     or a ground-based fighter controller.
 
@@ -114,19 +114,19 @@ Before we dive in, though, a few points:
 \item[Group] Contacts flying together.
 
 \item[Merged] Contacts---usually bandits---are within visual range
-    \acronym{(wvr)}.
+    \ac{(wvr)}.
     Get your eyes out of the cockpit and start turning \& burning.
     Named after what happens to multiple contacts when they run into each other
     on someone's radar screen---they \emph{merge}.
 
 \item[Picture] Tell me about nearby contacts (with BRAA or Bullseye calls).
-    Requested from \acronym{c2} assets.
+    Requested from \ac{c2} assets.
 
 \item[Pop-up] A new contact has suddenly appeared at the given location.
 
 \item[Tally/No Joy] I see the enemy.\,/\,I don't see the enemy.
 
-\item[Tumbleweed] I've lost situational awareness \acronym{(sa)}
+\item[Tumbleweed] I've lost situational awareness \ac{(sa)}
     and don't know what's going on.
     Help me get reoriented, if you can.
 
@@ -149,7 +149,7 @@ What are you doing? What's your status?
     you stop what you're doing and commit on those contacts.
 
 \item[Fence In] Get ready for combat---shut off external lights,
-    arm weapons, enable electronic countermeasures \acronym{(ecm)}, etc.
+    arm weapons, enable electronic countermeasures \ac{(ecm)}, etc.
     From ``crossing the fence'' as you enter bad guy territory.
     Once you're out of combat, you \emph{fence out}.
 
@@ -175,18 +175,18 @@ Shooting things and not getting shot.
 
 \item[Delouse] A hostile jet is chasing me; please shoot them!
 
-\item[Dirt] A \acronym{sam} radar appeared on my \acronym{rwr}.
+\item[Dirt] A \ac{sam} radar appeared on my \ac{rwr}.
 
-\item[Fox 1] I'm shooting a semi-active radar homing \acronym{(sarh)}
+\item[Fox 1] I'm shooting a semi-active radar homing \ac{(sarh)}
     missile, like an \designation{AIM-7} Sparrow.
 \item[Fox 2] I'm shooting a heat-seeking missile, like an
     \designation{AIM-9} Sidewinder.
-\item[Fox 3] I'm shooting an active radar homing \acronym{(arh)} missile,
+\item[Fox 3] I'm shooting an active radar homing \ac{(arh)} missile,
     like an \designation{AIM-120} AMRAAM.
 
 \item[Guns] I'm shooting my cannon.
 
-\item[Nails] An aircraft's search radar appeared on my \acronym{rwr}.
+\item[Nails] An aircraft's search radar appeared on my \ac{rwr}.
 
 \item[Magnum] I'm shooting an anti-radiation missile,
     like an \designation{AGM-88} HARM.
@@ -204,18 +204,18 @@ Shooting things and not getting shot.
 
 \item[SAM] I \emph{see} an incoming surface to air missile!
 
-\item[Singer] My \acronym{rwr} indicates a \acronym{sam} is shooting at me!
+\item[Singer] My \ac{rwr} indicates a \ac{sam} is shooting at me!
 
 \item[Slapshot] Shoot an anti-radiation missile at the given radar/direction \\
     (as fast as possible, because \emph{they're shooting at me!})
 
     ``Slapshot \designation{SA-3}, South!''
 
-\item[Sniper] Shoot an anti-radiation missile at the given \acronym{sam} radar.
+\item[Sniper] Shoot an anti-radiation missile at the given \ac{sam} radar.
 
     ``Sniper \designation{SA-2}, Bullseye 270 30.''
 
-\item[Spike/Mud Spike] An [aircraft/\acronym{sam}] radar is tracking me. \\
+\item[Spike/Mud Spike] An [aircraft/\ac{sam}] radar is tracking me. \\
     (Now might be a good idea to start defending.)
 
 \item[Splash] Target destroyed. Sometimes \textbf{Shack} is used for
