--- a/sigmac.tex
+++ b/sigmac.tex
@@ -201,7 +201,7 @@
 
 \usepackage{csquotes}
 
-\newcommand{\edition}{First edition \acronym{(WIP)}}
+\newcommand{\edition}{First edition \ac{(WIP)}}
 
 \title{Some Idiot's Guide to Modern Air Combat}
 \author{José Jiménez}
@@ -235,7 +235,7 @@
 \newcommand{\introduce}[1]{\textit{#1}}
 
 % Letterspace acronyms a bit.
-\newcommand{\acronym}[1]{\textsc{#1}}
+\newcommand{\ac}[1]{\textsc{#1}}
 
 \newcommand{\designation}[1]{\mbox{\addfontfeature{Numbers=LowercaseOff}#1}}
 
@@ -305,7 +305,7 @@ The license's full text is available at \\
 \url{https://creativecommons.org/licenses/by-sa/4.0/legalcode}
 
 \vspace{0.5in}
-\edition{} (online \acronym{pdf}), typeset \today.
+\edition{} (online \ac{pdf}), typeset \today.
 } % end ragged right
 \clearpage
 
