--- a/what.tex
+++ b/what.tex
@@ -8,21 +8,21 @@ there's lots of great guides to learn how to fly:
 and
 \href{https://www.youtube.com/channel/UCqH078Ef0HENo01LF3xwIvA}{Crash Laobi},
 just to name a few.
-They'll show you how to start up a jet, take off, fly around
+They'll show you how to start up, take off, fly around
 without ripping your wings off, shoot some weapons, and land.
 
 But once you've got a decent grasp on how to fly a jet,
 guides for \emph{employing} that jet seem harder to come by.
 Once you know how not to crash the thing, you probably want to learn how to:
 \begin{itemize}
-\item Shoot other jets with beyond visual range \acronym{(bvr)} missiles
-\item Dogfight other jets within visual range \acronym{(wvr)}
-\item Defend yourself from surface-to-air missiles \acronym{(sam)}s
+\item Dogfight
+\item Shoot other planes beyond visual range \ac{(bvr)}
+\item Defend yourself from a surface-to-air missile \ac{(sam)}
 \item Put a bomb on a target
-\item Form a \emph{flight} with other jets, as a wingman or as its lead
+\item Act as a wingman or a flight lead, and fly in formation.
 \item Communicate with other pilots, and sound cool doing so
 \end{itemize}
-\dots all without taking a missile to the face.
+% \dots all without taking a missile to the face.
 
 Specific tactics vary from era to era and jet to jet,
 but many of the same fundamentals have held for the last 50
@@ -38,8 +38,7 @@ learn more.
 Militaries and pilots both love acronyms,
 and the jargon you get when you cross the two is an ungodly mess.
 I'll try to introduce relevant acronyms and terms where I can,
-and \chapref{brevity} will cover more of them.
-But I'm bound to miss a few.
+but I'm bound to miss a few.
 Thankfully, the Internet is full of useful aids---hopefully they can help you
 out.\punckern\footnote{%
 \href{https://www.fighterpilotpodcast.com/glossary/}{The Figheter Pilot Podcast's glossary}
